# zephyr-app-workspace

./: CMakeLists.txt  README.md  VERSION  linux.code-workspace  overlay-ota.conf  overlay-tls.conf  prj.conf  west.yml  windows.code-workspace  zephyr-windows.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
boards/: nucleo_f767zi.conf  nucleo_f767zi.overlay  nucleo_l476rg.conf  stm32f4_disco.conf  stm32f4_disco.overlay
docs/: design.md  notes.md
include/: AppTemplate.h  Button.h  CoapClient.h  EventManager.h  HttpClient.h  Led.h  MyClass.h  Network.h  Serial.h  Storage.h  Temperature.h  app_blinky.h  app_button.h  ca_certificate.h
scripts/renode/: README.md  flat.dts  includes.txt  nucleo-f767zi.repl  nucleo-f767zi.resc  nucleo_f767zi.repl  nucleo_f767zi.resc  stm32f4_disco.resc
scripts/west/: build.py
src/: AppAcquisition.cpp  AppSensorDataConsumer.cpp  AppSensorDataProducer.cpp  AppTelemetry.cpp  AppTemplate.cpp  Button.cpp  CoapClient.cpp  EventManager.cpp  HttpClient.cpp  Led.cpp  MyClass.cpp  Network.cpp  Serial.cpp  ServiceUpdater.cpp  Storage.cpp  Temperature.cpp  Updater.cpp  app_blinky.c  app_button.c  main.c  main.cpp
